--- a/senate.html
+++ b/senate.html
@@ -10,6 +10,8 @@
 		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 		</script>
 	<link rel="stylesheet" href="css/style.css">
+	
+	<script type="text/javascript" src="framework/vue.js"></script>
 	<title>Senate</title>
 </head>
 
