avance en la implementacion de vue

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<div id="container">
+	<div class="container">
 		<header class="wrapper">
 			<div class="item1">
 				<a href="index.html"><img src="img/WhatsApp Image 2019-04-22 at 12.01.11.jpeg" alt="TGIF-logo" class="img-fluid"></a>
