--- a/house-attendance.html
+++ b/house-attendance.html
@@ -2,133 +2,141 @@
 <html lang="en">
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-		</script>
-	<link rel="stylesheet" href="css/style.css">
-	<title>House - Attendance</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link rel="stylesheet" href="css/style.css">
+    <script type="text/javascript" src="framework/vue.js"></script>
+    <title>House - Attendance</title>
 </head>
 
 <body>
-	<div id="container">
-		<header class="wrapper">
-			<div class="item1">
-				<a href="index-html"><img src="img/WhatsApp Image 2019-04-22 at 12.01.11.jpeg" alt="TGIF-logo" class="img-fluid"></a>
-			</div>
-			<div class="item2">
-				<a href="mailto:info@tgif.net">info@tgif.net</a>
-			</div>
-		</header>
-
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">
-							Congress 113
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="senate.html">Senate</a>
-							<a class="dropdown-item" href="house.html">House</a>
-						</div>
-					</li>
-
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Attendance</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="senate-attendance.html">Senate</a></li>
-							<li><a class="dropdown-item active" href="#">House</a></li>
-						</ul>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Party loyalty</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="senate-party-loyalty.html">Senate</a></li>
-							<li><a class="dropdown-item" href="house-party-loyalty.html">House</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</nav>
-		<!--Table container-->
-		<div>
-			<h2>Attendance</h2>
-			<p class="text-justify">The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
-				Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in
-				most
-				cases,
-				debates continue even if a majority is not present.</p>
-
-			<p class="text-justify">The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating
-				"aye"
-				or
-				"no" when his or her name is announced. The House reserves roll-call votes for the most formal matters,
-				as a
-				roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device.
-				In
-				the
-				case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the
-				tiebreaking vote.</p>
-
-			<h2>Senate at a glance</h2>
-			<table class="table">
-				<thead class="thead-dark">
-					<tr>
-						<th>Party</th>
-						<th>Number of Reps</th>
-						<th>% Voted with Prty</th>
-					</tr>
-				</thead>
-				<tbody id="tabla-cantidad">
-				</tbody>
-			</table>
-
-			<h2>Least Engaged (Bottom 10% Attendance)</h2>
-			<table class="table">
-				<thead class="thead-dark">
-					<tr>
-						<th>Name</th>
-						<th>Number of Missed Votes</th>
-						<th>% Missed</th>
-					</tr>
-				</thead>
-				<tbody id="tabla1">
-				</tbody>
-			</table>
-
-			<h2>Most Engaged (Top 10% Attendance)</h2>
-			<table class="table">
-				<thead class="thead-dark">
-					<tr>
-						<th>Name</th>
-						<th>Number of Missed Votes</th>
-						<th>% Missed</th>
-					</tr>
-				</thead>
-				<tbody id="tabla2">
-				</tbody>
-			</table>
-
-		</div>
-	</div>
-	<script src="js/congress_113_house.js"></script>
-	<script src="js/main.js"></script>
-	<script src="js/statistics.js"></script>
-	<script>
-		window.onload = function () {
-			generarTabla("least-engaged", "most-engaged", true);
-		}
-	</script>
+    <div class="container" id="app">
+        <header class="wrapper">
+            <div class="item1">
+                <a href="index-html"><img src="img/WhatsApp Image 2019-04-22 at 12.01.11.jpeg" alt="TGIF-logo" class="img-fluid"></a>
+            </div>
+            <div class="item2">
+                <a href="mailto:info@tgif.net">info@tgif.net</a>
+            </div>
+        </header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Congress 113
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="senate.html">Senate</a>
+                            <a class="dropdown-item" href="house.html">House</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Attendance</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="senate-attendance.html">Senate</a></li>
+                            <li><a class="dropdown-item active" href="#">House</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Party loyalty</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="senate-party-loyalty.html">Senate</a></li>
+                            <li><a class="dropdown-item" href="house-party-loyalty.html">House</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!--Table container-->
+        <div>
+            <h2>Attendance</h2>
+            <p class="text-justify">The Constitution specifies that a majority of members constitutes a quorum to do business in each house.
+                Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in
+                most
+                cases,
+                debates continue even if a majority is not present.</p>
+            <p class="text-justify">The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating
+                "aye"
+                or
+                "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters,
+                as a
+                roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device.
+                In
+                the
+                case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the
+                tiebreaking vote.</p>
+            <h2>Senate at a glance</h2>
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Party</th>
+                        <th>Number of Reps</th>
+                        <th>% Voted with Prty</th>
+                    </tr>
+                </thead>
+                <tbody id="tabla-cantidad">
+                    <tr>
+                        <td>Republicans</td>
+                        <td>{{statistics['number-of-republicans']}}</td>
+                        <td>{{statistics['republicans-average-votes-with-party']}}</td>
+                    </tr>
+                    <tr>
+                        <td>Democrats</td>
+                        <td>{{statistics['number-of-democrats']}}</td>
+                        <td>{{statistics['democrats-average-votes-with-party']}}</td>
+                    </tr>
+                    <tr>
+                        <td>Independents</td>
+                        <td>{{statistics['number-of-independents']}}</td>
+                        <td>{{statistics['democrats-average-votes-with-party']}}</td>
+                    </tr>S
+                </tbody>
+            </table>
+            <h2>Least Engaged (Bottom 10% Attendance)</h2>
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Name</th>
+                        <th>Number of Missed Votes</th>
+                        <th>% Missed</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="element in statistics['least-engaged']">
+                        <td>{{element.first_name}} {{element.middle_name}} {{element.last_name}}</td>
+                        <td>{{element.missed_votes}}</td>
+                        <td>{{element.missed_votes_pct}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <h2>Most Engaged (Top 10% Attendance)</h2>
+            <table class="table">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Name</th>
+                        <th>Number of Missed Votes</th>
+                        <th>% Missed</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="element in statistics['most-engaged']">
+                        <td>{{element.first_name}} {{element.middle_name}} {{element.last_name}}</td>
+                        <td>{{element.missed_votes}}</td>
+                        <td>{{element.missed_votes_pct}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <script src="js/statistics.js"></script>
+    <script src="js/congress_113_house.js"></script>
 </body>
 
 </html>
