fix almost done

--- a/house.html
+++ b/house.html
@@ -82,7 +82,7 @@
 				</div>
 				<div>
 					<label for="selectstate">Filter by State:</label>
-					<select name="" id="selectstate" onchange="obtenerValores()">
+					<select name="" id="selectstate" onchange="iniciar()">
 						<option value="">All</option>
 						<option value="AL">Alabama</option>
 						<option value="AK">Alaska</option>
