--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -99,7 +99,7 @@
                 <tbody id="tabla1">
                     <tr v-for="element in statistics['least-loyal']">
                         <td>{{element.first_name}} {{element.middle_name}} {{element.last_name}}</td>
-                        <td>{{element.total_votes}}</td>
+                        <td>{{Math.round((element.total_votes - element.missed_votes) * element.votes_with_party_pct / 100)}}</td>
                         <td>{{element.votes_with_party_pct}}</td>
                     </tr>
                 </tbody>
@@ -116,7 +116,7 @@
                 <tbody id="tabla2">
                     <tr v-for="element in statistics['most-loyal']">
                         <td>{{element.first_name}} {{element.middle_name}} {{element.last_name}}</td>
-                        <td>{{element.total_votes}}</td>
+                        <td>{{Math.round((element.total_votes - element.missed_votes) * element.votes_with_party_pct / 100)}}</td>
                         <td>{{element.votes_with_party_pct}}</td>
                     </tr>
                 </tbody>
