--- a/house.html
+++ b/house.html
@@ -76,9 +76,9 @@
 			<div class="d-flex justify-content-between">
 				<div>
 					<label>Filter by Party:</label>
-					<label><input type="checkbox" value="R" name="party" id="R" checked onchange="obtenerValores()">Republican</label>
-					<label><input type="checkbox" value="D" name="party" id="D" checked onchange="obtenerValores()">Democrat</label>
-					<label><input type="checkbox" value="I" name="party" id="I" checked onchange="obtenerValores()">Independient</label>
+					<label><input type="checkbox" value="R" name="party" id="R" checked onchange="iniciar()">Republican</label>
+					<label><input type="checkbox" value="D" name="party" id="D" checked onchange="iniciar()">Democrat</label>
+					<label><input type="checkbox" value="I" name="party" id="I" checked onchange="iniciar()">Independient</label>
 				</div>
 				<div>
 					<label for="selectstate">Filter by State:</label>
